--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     />
 
     <title>Digital Industry Agency</title>
-
+    <link
+      rel="shortcut icon"
+      href="assets/img/fav_dia.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="lib/mobirise-icons2/mobirise2.css" />
     <link rel="stylesheet" href="lib/mobirise-icons/mobirise-icons.css" />
     <link rel="stylesheet" href="lib/tether/tether.min.css" />
@@ -80,7 +84,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link link text-white display-4"
-                  href="index.html#portofolio"
+                  href="#portofolio"
                 >
                   Portofolio
                 </a>
@@ -122,7 +126,7 @@
     <section class="header2 firmm4_header2 cid-sk0DXaAKtK" id="pembuka">
       <div class="container">
         <div class="row justify-content-center align-items-center">
-          <div class="col-lg-6 col-md-6 col-12 head_block">
+          <div class="col-lg-6 col-md-6 col-12 head_block mt-5">
             <h1 class="mbr-section-title mbr-fonts-style display-1">
               <strong>Digital Industry Agency</strong>
             </h1>
@@ -142,8 +146,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-7 col-12 image_img">
-            <img src="assets/img/pembuka_1.png" alt="" />
+          <div class="col-lg-6 col-md-7 col-12 p-5 image_img d-none d-lg-block">
+            <img src="assets/img/cta.png" alt="" />
           </div>
         </div>
       </div>
@@ -263,7 +267,7 @@
             >
               <img
                 class="w-100"
-                src="https://dummyimage.com/1920x1281/cbd5e1/0c0f0d"
+                src="assets/img/dia-p1.png"
                 alt=""
                 data-slide-to="0"
                 data-target="#lb-sk15raKF21"
@@ -283,7 +287,7 @@
             >
               <img
                 class="w-100"
-                src="https://dummyimage.com/1920x1281/cbd5e1/0c0f0d"
+                src="assets/img/dia-p2.png"
                 alt=""
                 data-slide-to="1"
                 data-target="#lb-sk15raKF21"
@@ -303,7 +307,7 @@
             >
               <img
                 class="w-100"
-                src="https://dummyimage.com/1920x1281/cbd5e1/0c0f0d"
+                src="assets/img/dia-p3.png"
                 alt=""
                 data-slide-to="1"
                 data-target="#lb-sk15raKF21"
@@ -336,21 +340,21 @@
                     <div class="carousel-item active">
                       <img
                         class="d-block w-100"
-                        src="https://dummyimage.com/1920x1281/cbd5e1/0c0f0d"
+                        src="assets/img/dia-p1.png"
                         alt=""
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         class="d-block w-100"
-                        src="https://dummyimage.com/1920x1281/cbd5e1/0c0f0d"
+                        src="assets/img/dia-p2.png"
                         alt=""
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         class="d-block w-100"
-                        src="https://dummyimage.com/1920x1281/cbd5e1/0c0f0d"
+                        src="assets/img/dia-p3.png"
                         alt=""
                       />
                     </div>
@@ -428,7 +432,7 @@
           </div>
           <div class="col-12 col-md-7 col-sm-8 col-lg-6">
             <div class="image-wrapper">
-              <img src="https://dummyimage.com/640x640/cbd5e1/0c0f0d" alt="" />
+              <img src="assets/img/cta.png" alt="" />
             </div>
           </div>
         </div>
@@ -719,16 +723,21 @@
             <div class="contacts">
               <p class="contacts_mail mbr-fonts-style display-4">
                 <strong>E-mail:</strong>
-                <a href="#" class="text-white"
-                  >digitalindustryagency@gmail.com</a
-                >
+                <a
+                  href="mailto:igitalindustryagency@gmail.com"
+                  class="text-white"
+                  >digitalindustryagency@gmail.com
+                </a>
               </p>
               <p class="contacts_phone mbr-fonts-style display-4">
                 <strong>Phone:</strong>
-                <a href="#" class="text-white">+62812 7093 0088</a>
+                <a class="text-white" href="tel:+6281270930088"
+                  >+62812 7093 0088</a
+                >
               </p>
             </div>
           </div>
+
           <div class="footer_col">
             <h5 class="mbr-section-subtitle mbr-fonts-style display-7">
               <strong>Layanan</strong>
@@ -759,17 +768,6 @@
               </li>
               <li class="mbr-text item-wrap">
                 <a href="#" class="text-white">Team</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer_col">
-            <h5 class="mbr-section-subtitle mbr-fonts-style display-7">
-              <strong>Kebijakan</strong>
-            </h5>
-            <ul class="list mbr-fonts-style display-4">
-              <li class="mbr-text item-wrap">
-                <a href="#" class="text-white">Kebijakan Klien</a>
               </li>
             </ul>
           </div>
